[tool.poetry]
name = "lnkdnlm"
version = "0.1.0"
description = "LLM powered linkedin job search"
authors = ["Maqbool ur Rahim Khan <maqboolurrahim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.3"
ruff = "^0.1.9"
click = "^8.1.7"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
